--- a/src/CSimple/Components/CaptureControlsCard.xaml
+++ b/src/CSimple/Components/CaptureControlsCard.xaml
@@ -25,7 +25,7 @@
                                Grid.Column="0"
                                VerticalOptions="Center"
                                Margin="0,0,12,0" />
-                        <ProgressBar Progress="0.8"
+                        <ProgressBar Progress="{Binding UserTouchLevel}"
                                      Grid.Row="0"
                                      Grid.Column="1"
                                      VerticalOptions="Center"
@@ -41,7 +41,7 @@
                                Grid.Column="0"
                                VerticalOptions="Center"
                                Margin="0,0,12,0" />
-                        <ProgressBar Progress="0.6"
+                        <ProgressBar Progress="{Binding UserVisualLevel}"
                                      Grid.Row="1"
                                      Grid.Column="1"
                                      VerticalOptions="Center"
@@ -86,7 +86,7 @@
                                Grid.Column="0"
                                VerticalOptions="Center"
                                Margin="0,0,12,0" />
-                        <ProgressBar Progress="0.5"
+                        <ProgressBar Progress="{Binding PCVisualLevel}"
                                      Grid.Row="0"
                                      Grid.Column="1"
                                      VerticalOptions="Center"
@@ -102,7 +102,7 @@
                                Grid.Column="0"
                                VerticalOptions="Center"
                                Margin="0,0,12,0" />
-                        <ProgressBar Progress="{Binding PCAudioLevel}"
+                        <ProgressBar Progress="{Binding PCAudioScaledLevel}"
                                      Grid.Row="1"
                                      Grid.Column="1"
                                      VerticalOptions="Center"
